RESOLVED FIXED89237
Reduced (but did not eliminate) use of "berzerker GC"
https://bugs.webkit.org/show_bug.cgi?id=89237
Summary Reduced (but did not eliminate) use of "berzerker GC"
Geoffrey Garen
Reported 2012-06-15 11:50:13 PDT
Reduced (but did not eliminate) use of "berzerker GC"
Attachments
Patch (6.79 KB, patch)
2012-06-15 12:15 PDT, Geoffrey Garen
no flags
Patch (8.14 KB, patch)
2012-06-15 12:26 PDT, Geoffrey Garen
no flags
Patch (5.51 KB, patch)
2012-06-26 11:14 PDT, Geoffrey Garen
barraclough: review+
Geoffrey Garen
Comment 1 2012-06-15 12:15:38 PDT
Geoffrey Garen
Comment 2 2012-06-15 12:26:52 PDT
Geoffrey Garen
Comment 3 2012-06-20 19:00:28 PDT
Geoffrey Garen
Comment 4 2012-06-26 11:14:33 PDT
Darin Adler
Comment 5 2012-06-26 16:22:35 PDT
Comment on attachment 149567 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=149567&action=review > Source/WebCore/bridge/runtime_object.cpp:55 > RuntimeObject* thisObject = static_cast<RuntimeObject*>(cell); > - ASSERT(!thisObject->m_instance); > thisObject->RuntimeObject::~RuntimeObject(); Without the assertion it seems this might read better without the local variable too.
Geoffrey Garen
Comment 6 2012-06-26 20:44:08 PDT
Mark Hahnenberg
Comment 7 2012-10-16 17:07:03 PDT
*** Bug 87917 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.