Source/WebCore/bridge/runtime_object.cpp
@@ -51,9 +51,7 @@ void RuntimeObject::finishCreation(JSGlobalObject* globalObject)
 
 void RuntimeObject::destroy(JSCell* cell)
 {
-    RuntimeObject* thisObject = static_cast<RuntimeObject*>(cell);
-    ASSERT(!thisObject->m_instance);
-    thisObject->RuntimeObject::~RuntimeObject();
+    static_cast<RuntimeObject*>(cell)->RuntimeObject::~RuntimeObject();
 }
 
 void RuntimeObject::invalidate()
